2000-07-30 12:45 UTC+0800 Ron Pinkas <ron@profit-master.com>
  * source/compiler/harbour.slx
    - Removed AS CHARACTER, AS BOOLEAN, AS OBJ, AS NUM
      /* Left AS VARIANT and AS USUAL until vote results tabulated. */

  * utils/hbdoc/ft_funcs.prg
    * Changed AS CHAR -> AS STRING and AS NUM to AS NUMERIC

  * source/compiler/simplex.c
    * Changed to use YY_DECL macro in declaration of yylex()

2000-07-30 14:32 UTC+0100 Victor Szakats <info@szelvesz.hu>

   * source/compiler/harbour.l
   * source/compiler/hbpcode.c
   * tests/testdecl.prg
   * tests/testwarn.prg
   * contrib/hbclip/hbclip.ch
     * Cleanup up the Strong Typing type keywords to more-or-less match
       the VO syntax. Note that there's two TODOs according to this.

       These are the valid keywords now:

       AS ARRAY
       AS CODEBLOCK
       AS STRING
       AS CLASS
       AS DATE
       AS LOGICAL
       AS NUMERIC
       AS OBJECT
       AS USUAL

   * source/rtl/scroll.c
     + Two comments added to make optimized code look more clear.

2000-07-29 08:50 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * hb_slex.bc
     * Synchronized with makefile.bc

2000-07-29 17:34 UTC+0100 Victor Szakats <info@szelvesz.hu>

   * makefile.vc
   * makefile.bc
   * source/lang/Makefile
     + Polish Lang modules added.

2000-07-29 17:25 UTC+0100 Victor Szakats <info@szelvesz.hu>

   * utils/hbtest/*
     + Added check for :Arg variable of returned error objects.
       Note that currently Harbour doesn't support the :Arg var, so many
       tests will fail which looked OK until now.

   * source/vm/itemapi.c
     % Small optimizations.

   * source/vm/arrays.c
     - hb_arrayGetBool() removed, since it was the same as hb_arrayGetL(), but
       had no prototype in hbapi.h.
     % Small optimizations.

   * source/rtl/gtapi.c
     * TRACE call fix in hb_gtSetPos()
     ! NOTE made more clear.
     * One buffer size changed to 512 from 500, to be the power of 2.
