@@ -1,0 +1,18 @@
+#define HB_MACRO_SUPPORT
+
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+#include <limits.h>
+
+#include "hbmacro.h"
+#include "hbcomp.h"
+
+#include "macroy.h"
+#include "hbsetup.h"    /* main configuration file */
+#include "hberrors.h"
+#include "hbdefs.h"
+
+#define SLX_RULES "macro.slx"
+
+#include "simplex.c"
